--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     <title>React App</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   </head>
-  <body style="background: #b2b3b4">
+  <body style="background: #ffffff">
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
